--- a/css/style.css
+++ b/css/style.css
@@ -62,4 +62,18 @@ a {
 a:hover {
   background-color: #FFCB05;
 }
+
+.battleGrid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  place-items: center;
+}
+
+.battleGrid h1, .battleGrid h2, .battleGrid h3 {
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
