--- a/css/style.css
+++ b/css/style.css
@@ -32,19 +32,7 @@ header h1 {
   margin-top: 2em;
 }
 
-.pokeCard1 {
-  border: 5px solid #3D7DCA;
-  border-radius: 7px;
-  padding: 1.5rem;
-}
-
-.pokeCard2 {
-  border: 5px solid #3D7DCA;
-  border-radius: 7px;
-  padding: 1.5rem;
-}
-
-.pokeCard3 {
+.pokeCard {
   border: 5px solid #3D7DCA;
   border-radius: 7px;
   padding: 1.5rem;
@@ -71,9 +59,51 @@ a:hover {
   -ms-grid-rows: auto;
       grid-template-rows: auto;
   place-items: center;
+  margin-top: 3em;
 }
 
-.battleGrid h1, .battleGrid h2, .battleGrid h3 {
+.battleGrid h1, .battleGrid h2 {
   text-align: center;
+}
+
+#winLoseText {
+  font-size: 3em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.hidden {
+  display: none;
+}
+
+.button {
+  background-color: #3D7DCA;
+  border-radius: 3px;
+  border: 1px solid #000000;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 2em;
+  padding: 9px 27px;
+  text-decoration: none;
+  margin-top: 20px;
+  margin-left: 5em;
+}
+
+.button:hover {
+  background-color: #0688fa;
+}
+
+.button:active {
+  position: relative;
+  top: 1px;
+}
+
+.mrgBtm {
+  margin-bottom: 3em;
 }
 /*# sourceMappingURL=style.css.map */
